--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,21 @@ async-timeout==3.0.1
 attrs==20.3.0
 cairocffi==1.2.0
 CairoSVG==2.5.2
+certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
 cssselect2==0.4.1
 defusedxml==0.7.1
 discord==1.0.1
 discord.py==1.7.1
-idna==3.1
+idna==2.10
 multidict==5.1.0
 numpy==1.20.2
 Pillow==8.2.0
 pycparser==2.20
+requests==2.25.1
 tinycss2==1.1.0
 typing-extensions==3.10.0.0
+urllib3==1.26.6
 webencodings==0.5.1
 yarl==1.6.3
