--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+aiogram==2.13
 aiohttp==3.7.4.post0
+APScheduler==3.6.3
 async-timeout==3.0.1
 attrs==20.3.0
+Babel==2.9.1
+cachetools==4.2.2
 cairocffi==1.2.0
 CairoSVG==2.5.2
 certifi==2021.5.30
@@ -15,9 +19,14 @@ multidict==5.1.0
 numpy==1.20.2
 Pillow==8.2.0
 pycparser==2.20
+python-telegram-bot==13.7
+pytz==2021.1
 requests==2.25.1
+six==1.16.0
 tinycss2==1.1.0
+tornado==6.1
 typing-extensions==3.10.0.0
+tzlocal==2.1
 urllib3==1.26.6
 webencodings==0.5.1
 yarl==1.6.3
