--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ APScheduler==3.6.3
 async-timeout==3.0.1
 attrs==20.3.0
 Babel==2.9.1
+base58==2.1.0
+bitarray==1.2.2
 cachetools==4.2.2
 cairocffi==1.2.0
 CairoSVG==2.5.2
@@ -11,22 +13,49 @@ certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
 cssselect2==0.4.1
+cytoolz==0.11.0
 defusedxml==0.7.1
 discord==1.0.1
 discord.py==1.7.1
+eth-abi==2.1.1
+eth-account==0.5.4
+eth-hash==0.3.1
+eth-keyfile==0.5.1
+eth-keys==0.3.3
+eth-rlp==0.2.1
+eth-typing==2.2.2
+eth-utils==1.10.0
+hexbytes==0.2.1
 idna==2.10
+importlib-metadata==4.6.1
+ipfshttpclient==0.7.0
+jsonschema==3.2.0
+lru-dict==1.1.7
+multiaddr==0.0.9
 multidict==5.1.0
+netaddr==0.8.0
 numpy==1.20.2
+parsimonious==0.8.1
 Pillow==8.2.0
+protobuf==3.17.3
 pycparser==2.20
+pycryptodome==3.10.1
+pyrsistent==0.18.0
 python-telegram-bot==13.7
 pytz==2021.1
+pywin32==301
 requests==2.25.1
+rlp==2.0.1
 six==1.16.0
 tinycss2==1.1.0
+toolz==0.11.1
 tornado==6.1
 typing-extensions==3.10.0.0
 tzlocal==2.1
 urllib3==1.26.6
+varint==1.0.2
+web3==5.20.1
 webencodings==0.5.1
+websockets==9.1
 yarl==1.6.3
+zipp==3.5.0
