--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,8 @@
-aiogram==2.13
-aiohttp==3.7.4.post0
-APScheduler==3.6.3
-argon2-cffi==21.1.0
-async-timeout==3.0.1
-attrs==20.3.0
-Babel==2.9.1
-backcall==0.2.0
-base58==2.1.0
-bitarray==1.2.2
-bleach==4.1.0
-cachetools==4.2.2
-cairocffi==1.2.0
-CairoSVG==2.5.2
-certifi==2021.5.30
-cffi==1.14.5
-chardet==4.0.0
-colorama==0.4.4
-colorlover==0.3.0
-cssselect2==0.4.1
-cufflinks==0.17.3
-cycler==0.10.0
-cytoolz==0.11.0
-debugpy==1.4.3
-decorator==5.1.0
-defusedxml==0.7.1
-discord==1.0.1
-discord.py==1.7.1
-entrypoints==0.3
-eth-abi==2.1.1
-eth-account==0.5.4
-eth-hash==0.3.1
-eth-keyfile==0.5.1
-eth-keys==0.3.3
-eth-rlp==0.2.1
-eth-typing==2.2.2
-eth-utils==1.10.0
-finance==0.2502
-hexbytes==0.2.1
-idna==2.10
-importlib-metadata==4.6.1
-ipfshttpclient==0.7.0
-ipykernel==6.4.1
-ipython==7.27.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.4
-jedi==0.18.0
-Jinja2==3.0.1
-jsonschema==3.2.0
-jupyter-client==7.0.2
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.1
-kiwisolver==1.3.2
-lru-dict==1.1.7
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mplfinance==0.12.7a17
-multiaddr==0.0.9
-multidict==5.1.0
-nbclient==0.5.4
-nbconvert==6.1.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-netaddr==0.8.0
-notebook==6.4.3
-numpy==1.20.2
-packaging==21.0
-pandas==1.3.2
-pandocfilters==1.4.3
-parsimonious==0.8.1
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==8.2.0
-plotly==5.3.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.20
-protobuf==3.17.3
-pycparser==2.20
-pycryptodome==3.10.1
-Pygments==2.10.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-python-telegram-bot==13.7
-pytz==2021.1
-pywinpty==1.1.4
-pyzmq==22.2.1
-requests==2.25.1
-rlp==2.0.1
-Send2Trash==1.8.0
-six==1.16.0
-tenacity==8.0.1
-terminado==0.12.1
-testpath==0.5.0
-tinycss2==1.1.0
-toolz==0.11.1
-tornado==6.1
-traitlets==5.1.0
-typing-extensions==3.10.0.0
-tzlocal==2.1
-urllib3==1.26.6
-varint==1.0.2
-wcwidth==0.2.5
-web3==5.20.1
-webencodings==0.5.1
-websockets==9.1
-widgetsnbextension==3.5.1
-yarl==1.6.3
-zipp==3.5.0
+discord~=1.0.1
+web3~=5.20.1
+numpy~=1.20.2
+CairoSVG~=2.5.2
+requests~=2.25.1
+pandas~=1.3.3
+aiogram~=2.13
+mplfinance~=0.12.7a17
