typos, refactor and fixes

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-PRIVATE_KEY = "abcdefgh"
-MNEMORIC = "test test test"
+PRIVATE_KEY = "abcdefghijklmnopqrstuvwxyz"
+DISCORD_KEY = "abcdefghijklmnopqrstuvwxyz"
+TELEGRAM_KEY = "abcdefghijklmnopqrstuvwxyz"
