--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PRIVATE_KEY = "abcdefghijklmnopqrstuvwxyz"
-DISCORD_KEY = "abcdefghijklmnopqrstuvwxyz"
-TELEGRAM_KEY = "abcdefghijklmnopqrstuvwxyz"
+DISCORD_JOEBOT_KEY = "abcdefghijklmnopqrstuvwxyz"
+DISCORD_AVAXBOT_KEY = "abcdefghijklmnopqrstuvwxyz"
+TELEGRAM_JOEBOT_KEY = "abcdefghijklmnopqrstuvwxyz"
