--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-discord~=1.7.3
-web3~=5.20.1
-numpy~=1.20.2
-CairoSVG~=2.5.2
-requests~=2.25.1
-pandas~=1.3.3
-aiogram~=2.13
-mplfinance~=0.12.7a17
-python-dotenv~=0.19.1
-tqdm~=4.62.3
+aiogram==2.19
+CairoSVG==2.5.2
+discord==1.7.3
+kaleido==0.2.1
+numpy==1.20.2
+pandas==1.3.3
+plotly==5.6.0
+python-dotenv==0.19.1
+requests==2.25.1
+web3==5.20.1
