update buildspec files

--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -11,4 +11,7 @@ phases:
     commands:
       - docker pull $REPOSITORY_URI:$IMAGE_TAG
       - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:$ENVIRONMENT
+  post_build:
+    commands:
+      - docker push $REPOSITORY_URI:$ENVIRONMENT
       - kubectl set image -n $ENVIRONMENT deployment/joebot joebot=$REPOSITORY_URI:$IMAGE_TAG
