--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -8,4 +8,6 @@ phases:
       - aws eks update-kubeconfig --name $ENVIRONMENT-trader-joe-eks
   build:
     commands:
-      - kubectl set image -n $ENVIRONMENT deployment/joebot joebot=$REPOSITORY_URI:$IMAGE_TAG
+      - kubectl set image -n $ENVIRONMENT deployment/joebot-avax joebot-avax=$REPOSITORY_URI:$IMAGE_TAG
+      - kubectl set image -n $ENVIRONMENT deployment/joebot-telegram joebot-telegram=$REPOSITORY_URI:$IMAGE_TAG
+      - kubectl set image -n $ENVIRONMENT deployment/joebot-discord joebot-discord=$REPOSITORY_URI:$IMAGE_TAG
