--- a/buildspec-build.yml
+++ b/buildspec-build.yml
@@ -12,6 +12,7 @@ phases:
     commands:
       - docker build -t $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION .
       - docker tag $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION $REPOSITORY_URI:$ENVIRONMENT-$CODEBUILD_BUILD_NUMBER
+      - docker tag $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION $REPOSITORY_URI:$ENVIRONMENT
   post_build:
     commands:
       - docker push $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION
